--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+input {
+    @apply border-2 border-blue-600 px-3 py-2 rounded-md
+}
